--- a/YURT-OTOMASYONU/Views/Login/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     Layout = null;
 }
 
@@ -7,11 +8,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <title>Index</title>
 </head>
 <body>
-    <div>
-    
+    <div> 
+        <a>login page deneme</a>
     </div>
 </body>
 </html>
