--- a/YURT-OTOMASYONU/Views/Login/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Login/Index.cshtml
@@ -5,14 +5,183 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en" dir="ltr">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <meta charset="utf-8" />
+    <title>LoginPage</title>
+    
+
 </head>
+
 <body>
-    <div> 
-        <a>login page deneme</a>
+    <div class="center">
+        <h1>Giriş</h1>
+        <a href="" class="button">Öğrenci</a>   
+        <a href="" class="button">Personel</a>
+        <form method="post">
+            <div class="txt_field">
+                <input type="text" required>
+                <span></span>
+                <label>Kullanıcı Adı</label>
+            </div>
+            <div class="txt_field">
+                <input type="password" required>
+                <span></span>
+                <label>Şifre</label>
+            </div>
+            <div class="pass">Şifremi Unuttum</div>
+            <input type="checkbox"> Beni Hatırla<br>
+            <input type="submit" value="Giriş Yap">
+
+            <div class="signup_link">
+
+            </div>
+        </form>
     </div>
+
 </body>
+    
+
 </html>
+
+<style>
+
+   
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(120deg,#2980b9, #8e44ad);
+  height: 100vh;
+  overflow: hidden;
+}
+
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+}
+
+    .center h1 {
+        text-align: center;
+        padding: 20px 0;
+        
+    }
+.center form{
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+form .txt_field{
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 30px 0;
+}
+.txt_field input{
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+.txt_field label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .5s;
+}
+.txt_field span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: #2691d9;
+  transition: .5s;
+}
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label{
+  top: -5px;
+  color: #2691d9;
+}
+.txt_field input:focus ~ span::before,
+.txt_field input:valid ~ span::before{
+  width: 100%;
+}
+.pass {
+ float: right;
+ width: 115 px;
+        margin: -5px 0 20px 5px;
+        color: #a6a6a6;
+        cursor: pointer;
+    }
+.pass:hover{
+  text-decoration: underline;
+}
+input[type="submit"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+}
+input[type="submit"]:hover{
+  border-color: #2691d9;
+  transition: .5s;
+}
+
+.signup_link{
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
+}
+.signup_link a{
+  color: #2691d9;
+  text-decoration: none;
+}
+.signup_link a:hover{
+  text-decoration: underline;
+}
+    .button {
+        text-decoration: none;
+        font-size: 18px;
+        margin-left: 52px;
+        display: inline-block;
+        background-color: #2691d9;
+        color: #e9f4fb;
+        padding: 13px 26px;
+        border-radius: 25px;
+    }
+    .button:hover{
+        opacity: 0.8;
+        
+    }
+        
+
+
+
+</style>
+
