--- a/YURT-OTOMASYONU/Views/Login/Login.cshtml
+++ b/YURT-OTOMASYONU/Views/Login/Login.cshtml
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr">
+<html lang="tr" dir="ltr">
 <head>
     <meta charset="utf-8" />
     <title>LoginPage</title>
