--- a/YURT-OTOMASYONU/Views/Student/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Student/Index.cshtml
@@ -17,6 +17,8 @@
         <a href="" class="button">Yardım Çağır</a>
         <a href="" class="button">Ödeme İşlemleri</a>
         <a href="" class="şifre">Şifre Değiştir</a>
+        <a href="" class="şifre">Çıkış Yap</a>
+
     </div>
 </body>
 
@@ -63,7 +65,7 @@
         margin-left: 150px;
         position: relative;
         text-decoration: none;
-        padding: 20px 50px;
+        padding: 10px 50px;
         font-size: 1.25rem;
         display: flex;
         flex-direction: column;
@@ -72,7 +74,7 @@
         border-radius: 30px;
         box-shadow: 0 0 0 0 rgba(143,64,248,0.5),0 0 0 0 rgba(39,200,255,0.5);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
-        width: 250px;
+        width: 230px;
         height: 50px;
         margin-top: 32px;
         margin-bottom: 32px;
