--- a/YURT-OTOMASYONU/Views/Student/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Student/Index.cshtml
@@ -17,7 +17,7 @@
         <a href="" class="button">Yardım Çağır</a>
         <a href="" class="button">Ödeme İşlemleri</a>
         <a href="" class="şifre">Şifre Değiştir</a>
-        <a href="" class="şifre">Çıkış Yap</a>
+        <a href="@Url.Action("Logout","Login")" class="şifre">Çıkış Yap</a>
 
     </div>
 </body>
