--- a/YURT-OTOMASYONU/Views/Login/Login.cshtml
+++ b/YURT-OTOMASYONU/Views/Login/Login.cshtml
@@ -9,46 +9,70 @@
 <head>
     <meta charset="utf-8" />
     <title>LoginPage</title>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 
 <body>
-    <div class="center">
+    <div class="center overflow-hidden">
         <h1>Giriş</h1>
-        <a href="" class="button">Öğrenci</a>
-        <a href="" class="button">Personel</a>
-        @using (Html.BeginForm("Login", "Login", FormMethod.Post))
-        {
-            @ViewBag.kullanıcıyokmesaj
+        <a class="button cursor-pointer student-button button-active">Öğrenci</a>
+        <a class="button cursor-pointer staff-button">Personel</a>
+        <div class="form-area">
+            <!-- öğrenci formu -->
+            @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+            {
+                <form method="post" class="student-form">
+                    <div class="txt_field">
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "kullanıcı adı giriniz" })
+                        <span></span>
+                        <label>Kullanıcı Adı</label>
+                    </div>
+                    <div class="txt_field">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Şifre giriniz", required = "required" })
 
-            <form method="post">
+                        <span></span>
+                    </div>
+                    <div class="pass">Şifremi Unuttum</div>
+                    <label>
+                        @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-check-input" })
+                        Beni Hatırla
+                    </label>
+                    <input type="submit" value="Giriş Yap">
+                    <div class="signup_link">
+                    </div>
+                </form>
+            }
+            <!-- personel formu -->
+            <form method="post" class="staff-form staff-hidden">
                 <div class="txt_field">
-                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "kullanıcı adı giriniz" })
+                    <input type="text" class="form-control" placeholder="Personel kullanıcı adı giriniz">
                     <span></span>
+                    <label>Kullanıcı Adı</label>
                 </div>
                 <div class="txt_field">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Şifre giriniz", required = "required" })
+                    <input type="text" class="form-control" placeholder="Şifre">
                     <span></span>
                     <label>Şifre</label>
                 </div>
                 <div class="pass">Şifremi Unuttum</div>
                 <label>
-                    @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-check-input" })
+                    <input type="checkbox" class="form-check-input">
                     Beni Hatırla
                 </label>
                 <input type="submit" value="Giriş Yap">
                 <div class="signup_link">
                 </div>
             </form>
-        }
+        </div>
     </div>
-</body>
 
+</body>
 
 </html>
 
 <style>
+
 
     * {
         margin: 0;
@@ -137,10 +161,9 @@
 
     .pass {
         float: right;
-        width: 115 px;
-        margin: -5px 0 20px 5px;
         color: #a6a6a6;
         cursor: pointer;
+        font-size: 12px;
     }
 
         .pass:hover {
@@ -149,7 +172,8 @@
 
     input[type="submit"] {
         width: 100%;
-        height: 50px;
+        height: 38px;
+        margin-top: 20px;
         border: 1px solid;
         background: #2691d9;
         border-radius: 25px;
@@ -186,13 +210,74 @@
         font-size: 18px;
         margin-left: 52px;
         display: inline-block;
-        background-color: #2691d9;
-        color: #e9f4fb;
+        border: 1px solid #2691d9;
+        color: #2691d9;
         padding: 13px 26px;
         border-radius: 25px;
     }
 
-        .button:hover {
-            opacity: 0.8;
+    .button-active {
+        background-color: #2691d9;
+        color: #e9f4fb;
+    }
+
+    .button:hover {
+        opacity: 0.8;
+    }
+
+    .form-area {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        height: 270px;
+    }
+
+        .form-area .staff-form,
+        .form-area .student-form {
+            position: absolute;
+            width: 380px;
+            min-width: 380px;
+            left: 10px;
+            transition: .3s ease-out;
         }
+
+            .form-area .staff-form > label,
+            .form-area .student-form > label {
+                display: flex;
+                grid-gap: 3px;
+                font-size: 12px;
+                align-items: center;
+            }
+
+    .staff-hidden {
+        left: 750px !important;
+    }
+
+    .student-hidden {
+        left: -750px !important;
+    }
+
+    .overflow-hidden {
+        overflow: hidden;
+    }
+
+    .cursor-pointer:hover {
+        cursor: pointer
+    }
 </style>
+
+<script>
+    $('.student-button').click(function () {
+        $('.staff-form').addClass('staff-hidden')
+        $('.student-form').removeClass('student-hidden')
+        $('.button').removeClass('button-active')
+        $(this).addClass('button-active')
+    })
+    $('.staff-button').click(function () {
+        $('.staff-form').removeClass('staff-hidden')
+        $('.student-form').addClass('student-hidden')
+        $('.button').removeClass('button-active')
+        $(this).addClass('button-active')
+    })
+</script>
