--- a/YURT-OTOMASYONU/Views/Login/PersonelLogin.cshtml
+++ b/YURT-OTOMASYONU/Views/Login/PersonelLogin.cshtml
@@ -12,48 +12,44 @@
 <html lang="tr" dir="ltr">
 <head>
     <meta charset="utf-8" />
-    <title>LoginPage</title>
+    <title>Personel Giriş</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="center overflow-hidden">
-        <h1>Giriş</h1>
-        <a href="@Url.Action("Login","Login")" class="button cursor-pointer student-button button-active">Öğrenci</a>
-        <a href="@Url.Action("PersonelLogin","Login")" class="button cursor-pointer personel-button staff-button">Personel</a>
+        <h1>Personel Giriş</h1>
+        <a href="@Url.Action("Login","Login")" class="button cursor-pointer student-button  ">Öğrenci</a>
+        <a href="@Url.Action("PersonelLogin","Login")" class="button cursor-pointer personel-button staff-button button-active">Personel</a>
         <div class="form-area">
-            <!-- öğrenci formu -->
+            <!-- personel formu -->
             @using (Html.BeginForm("PersonelLogin", "Login", FormMethod.Post))
-{
-            <form class="staff-form staff-hidden">
-                <div class="txt_field">
-                    @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Personel kullanıcı adı giriniz" })
-                    <span></span>
-                    <label>Kullanıcı Adı</label>
-                </div>
-                <div class="txt_field">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Şifre giriniz", required = "required" })
-                    <span></span>
-                    <label>Şifre</label>
-                </div>
-                <div class="pass">Şifremi Unuttum</div>
-                <label>
-                    @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-check-input" })
-                    Beni Hatırla
-                </label>
-                <input type="submit" value="Giriş Yap">
-                <div class="signup_link">
-                </div>
-            </form>
-}
-
-
+            {
+                <form class="staff-form staff-hidden">
+                    <div class="txt_field">
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Personel Kullanıcı Adı Giriniz" })
+                        <span></span>
+                        <label>Kullanıcı Adı</label>
+                    </div>
+                    <div class="txt_field">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Şifre Giriniz", required = "required" })
+                        <span></span>
+                        <label>Şifre</label>
+                    </div>
+                    <div class="pass">Şifremi Unuttum</div>
+                    <label>
+                        @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-check-input" })
+                        Beni Hatırla
+                    </label>
+                    <input type="submit" value="Giriş Yap">
+                    <div class="signup_link">
+                    </div>
+                </form>
+            }
         </div>
     </div>
 </body>
 </html>
 <style>
-
-
     * {
         margin: 0;
         padding: 0;
