--- a/YURT-OTOMASYONU/Views/Student/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Student/Index.cshtml
@@ -34,6 +34,8 @@
         </a>
         <a href="" class="button">Yardım Çağır</a>
         <a href="" class="şifre">Şifre Değiştir</a>
+        <a href="@Url.Action("Profile","Student")" class="şifre">Profil</a>
+
         <a href="@Url.Action("Logout","Login")" class="şifre">Çıkış Yap</a>
 
     </div>
