--- a/YURT-OTOMASYONU/Views/Student/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Student/Index.cshtml
@@ -32,7 +32,14 @@
            class="button">
             Ödeme Yap
         </a>
-        <a href="" class="button">Yardım Çağır</a>
+        <a data-modal-form="true"
+           data-modal-size="modal-xl"
+           data-modal-title="Yardım Çağır"
+           href="@Url.Action("CallHelp", "Student", routeValues: new {Area = string.Empty})"
+           data-hook-beforeunload="true"
+           class="button">
+            Yardım Çağır
+        </a>
         <a href="" class="şifre">Şifre Değiştir</a>
         <a href="@Url.Action("Profile","Student", routeValues: new {Area = string.Empty,ogrenciId=ViewBag.OgrenciId})" class="şifre">Profil</a>
 
