--- a/YURT-OTOMASYONU/Views/Student/_EditPassword.cshtml
+++ b/YURT-OTOMASYONU/Views/Student/_EditPassword.cshtml
@@ -1,25 +1,36 @@
-﻿<div class="col-xl-12">
-    <div class="card">
-        <div class="card-body">
-            <div class="form-group">
-                <label class="form-label">Güncel Şifre</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Yeni Şifre</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Yeni Şifre Tekrar</label>
-            </div>
+﻿@model YURT_OTOMASYONU.ViewModels.Student.EditPasswordViewModel
 
+@using (Html.BeginForm("EditPassword", "Student", new { Area = String.Empty }, FormMethod.Post))
+{
+    <div class="col-xl-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="form-group">
+                    <label class="form-label">Güncel Şifre</label>
+                    @Html.TextBoxFor(m => m.OldPassword, null, new { @class = "form-control ", required = "required" })
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Yeni Şifre</label>
+                    @Html.TextBoxFor(m => m.NewPassword, null, new { @class = "form-control ", required = "required" })
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Yeni Şifre Tekrar</label>
+                    @Html.TextBoxFor(m => m.NewPasswordAgain, null, new { @class = "form-control ", required = "required" })
+                </div>
+
+            </div>
         </div>
     </div>
-</div>
-<hr />
-<div class="form-group form-group-sm row">
-    <div class="col-xs-12">
-        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal"><span style="color: white" class="fa fa-times"></span>&nbsp;&nbsp;Vazgeç</button>
-        <button type="submit" class="btn btn-success"><span style="color: white" class="fa fa-check"></span>&nbsp;&nbsp;Kaydet</button>
+    <hr />
+    <div class="form-group form-group-sm row">
+        <div class="col-xs-12">
+            <button class="btn btn-secondary" type="button" data-bs-dismiss="modal"><span style="color: white" class="fa fa-times"></span>&nbsp;&nbsp;Vazgeç</button>
+            <button type="submit" class="btn btn-success"><span style="color: white" class="fa fa-check"></span>&nbsp;&nbsp;Kaydet</button>
+        </div>
     </div>
-</div>
-<div class="clearfix"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>
+    <div class="clearfix"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>
+}
+
+
+
