Personel Anasayfa Butonların Tasarımı Tamamlandı #44

--- a/YURT-OTOMASYONU/Views/Personel/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/Index.cshtml
@@ -5,6 +5,21 @@
     ViewBag.Title = "Index";
     Layout = null;
 }
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<div style="margin-top:100px;margin-left:10px" class="btn-group">
+    <button style="margin-right:10px" type="button" class="btn btn-success">Öğrenciler</button>
+    <div class="vr"></div>
+    <button type="button" class="btn btn-success">Personeller</button>
+</div>
+<div style="margin-top:30px;margin-left:10px">
 
-<h2>personel ana sayfa</h2>
+    <button type="button" class="btn btn-primary">Öğrenci Ekle</button>
 
+    <button type="button" class="btn btn-danger">İzin İsteyenler</button>
+
+    <button type="button" class="btn btn-warning">Ödemeler</button>
+
+    <button type="button" class="btn btn-info">Yardımlar</button>
+
+
+</div>
